--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "react-select": "^1.0.0-rc.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@kadira/storybook-deployer": "^1.2.0",
     "@storybook/addon-actions": "^3.4.6",
     "@storybook/addon-links": "^3.4.6",
     "@storybook/addons": "^3.4.6",
     "@storybook/react": "^3.4.6",
     "autoprefixer": "^6.7.7",
-    "babel-core": "*",
     "babel-eslint": "^7.2.2",
     "babel-jest": "^17.0.2",
-    "babel-loader": "*",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
